--- a/contact.css
+++ b/contact.css
@@ -1,16 +1,20 @@
 body {
     background-color: #0d1117;
     color: #c9d1d9;
-    font-family: 'Roboto', sans-serif;
+    font-family: "the-seasons", sans-serif;
+    font-weight: 400;
+    font-style: normal;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
-h1, h3, h4 {
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    color: #58a6ff;
+h1,
+h3,
+h4 {
+  font-family: "the-seasons", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 a.contact-link {
@@ -22,11 +26,14 @@ a.contact-link:hover {
     text-decoration: underline;
 }
 
-.contact-info, .contact-form {
+.contact-info,
+.contact-form {
     background-color: #161b22;
 }
 
-.contact-info p, .contact-info h3, .contact-info h4 {
+.contact-info p,
+.contact-info h3,
+.contact-info h4 {
     margin-bottom: 1rem;
 }
 
