--- a/gallery.css
+++ b/gallery.css
@@ -4,7 +4,9 @@ body {
   background-size: 400% 400%;
   animation: gradientShift 15s ease infinite;
   color: #ffffff;
- font-family: 'Roboto', sans-serif;
+  font-family: "the-seasons", sans-serif;
+  font-weight: 400;
+  font-style: normal;
   margin: 0;
   padding: 0;
 }
