--- a/gallery.css
+++ b/gallery.css
@@ -80,10 +80,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .project-info {
-  padding: 1.4rem;
-  z-index: 2;
-  position: relative;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 1rem;
 }
+
 
 .project-info h3 {
   color: #65DDEA;
@@ -159,7 +162,11 @@ h1, h2, h3, h4, h5, h6 {
   box-shadow: 0 0 15px rgba(0, 255, 255, 0.1);
   border: 1px solid rgba(255, 255, 255, 0.05);
   transition: transform 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
+
 
 .project-frame:hover {
   transform: scale(1.02);
@@ -167,7 +174,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .project-frame iframe {
   width: 100%;
-  height: 300px;
+  height: 250px;
   border: none;
 }
 
