--- a/resume.css
+++ b/resume.css
@@ -1,5 +1,5 @@
 .resume-summary {
-    background-color: #161b22; 
+    background-color: #161b22;
     color: #c9d1d9;
     font-family: "the-seasons", sans-serif;
     font-weight: 400;
@@ -13,6 +13,10 @@
     border-radius: 12px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.6);
     color: #c9d1d9;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 1rem;
+    width: 100%;
 }
 
 
